background animation is added by Ashish Moghe

--- a/templates/views/database.hbs
+++ b/templates/views/database.hbs
@@ -1,42 +1,154 @@
 {{> header title="Database Data"}}
-<div id="nav" class="bg-transparent border-bottom">
-	<nav class="navbar bg-transparent container">
-		<div class="container-fluid">
-			<a class="navbar-brand logo">FileFormatConverter</a>
-			<div class="d-flex links">
+<div class="area">
+    <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
 
-				<a class="nav-link text-danger me-4" aria-current="page" href="/logout">Log out</a>
-			</div>
-		</div>
-	</nav>
+    </ul>
+</div>
+<div class="pattern0 fireworks fire0">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern1 fireworks fire1">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern2 fireworks fire2">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern3 fireworks fire3">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern4 fireworks fire4">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern5 fireworks fire5">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern6 fireworks fire6">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern7 fireworks fire7">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern8 fireworks fire8">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern9 fireworks fire9">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern10 fireworks fire10">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern11 fireworks fire11">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern12 fireworks fire12">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern13 fireworks fire13">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern14 fireworks fire14">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern15 fireworks fire15">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern16 fireworks fire16">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern17 fireworks fire17">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern18 fireworks fire18">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern19 fireworks fire19">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div id="nav" class="bg-transparent border-bottom">
+    <nav class="navbar bg-transparent container">
+        <div class="container-fluid">
+            <a class="navbar-brand logo">FileFormatConverter</a>
+            <div class="d-flex links">
+
+                <a class="nav-link text-danger me-4" aria-current="page" href="/logout">Log out</a>
+            </div>
+        </div>
+    </nav>
 </div>
 
 <div class="col-sm-8 mt-5 container">
-            <h2 class="alert alert-success text-center">List of Data: </h2>
-            <table class="table text-white border">
-                <thead class="border">
-                    <tr class="border">
+    <h2 class="alert alert-success text-center">List of Data: </h2>
+    <table class="table text-white border">
+        <thead class="border">
+            <tr class="border">
 
-                        <th class="border text-success" scope="col">USERNAME</th>
-                        <th class="border text-success" scope="col">EMAIL</th>
-                        <th class="border text-success" scope="col">PASSWORD</th>
+                <th class="border text-success" scope="col">USERNAME</th>
+                <th class="border text-success" scope="col">EMAIL</th>
+                <th class="border text-success" scope="col">PASSWORD</th>
 
-                    </tr>
-                </thead>
-                <tbody class="text-white border">
-                    {{#each data}}
-                    <tr class="border">
-                        <td class="border text-dark">{{username}}</td>
-                        <td class="border text-info">{{email}}</td>
-                        <td class="border text-danger" >{{password}}</td>
-                    </tr>
-                    {{/each}}
-                </tbody>
-            </table>
+            </tr>
+        </thead>
+        <tbody class="text-white border">
+            {{#each data}}
+            <tr class="border">
+                <td class="border text-dark">{{username}}</td>
+                <td class="border text-info">{{email}}</td>
+                <td class="border text-danger">{{password}}</td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
 
-        </div>
-      <!-- ********************************************* -->
+</div>
+<!-- ********************************************* -->
 
-                       <script src="javascript/bootstrap.bundle.min.js"></script>
-    </body>
+<script src="javascript/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
