--- a/templates/views/pptxtopdf.hbs
+++ b/templates/views/pptxtopdf.hbs
@@ -1,9 +1,121 @@
 {{> header title="PPTX To PDF Converter"}}
+<div class="pattern0 fireworks fire0">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern1 fireworks fire1">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern2 fireworks fire2">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern3 fireworks fire3">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern4 fireworks fire4">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern5 fireworks fire5">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern6 fireworks fire6">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern7 fireworks fire7">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern8 fireworks fire8">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern9 fireworks fire9">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern10 fireworks fire10">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern11 fireworks fire11">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern12 fireworks fire12">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern13 fireworks fire13">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern14 fireworks fire14">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern15 fireworks fire15">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern16 fireworks fire16">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern17 fireworks fire17">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern18 fireworks fire18">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern19 fireworks fire19">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
 
+<div class="area">
+  <ul class="circles">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+
+  </ul>
+</div>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid mx-5">
     <a class="navbar-brand fs-4 text-dark">FileFormatConverter</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+      aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -12,7 +124,7 @@
           <a class="nav-link text-dark me-4" aria-current="page" href="/sheetTopdf">XLSX TO PDF</a>
         </li>
         <li class="nav-item">
-           <a class="nav-link text-dark me-4" aria-current="page" href="/doctopdf">DOCX TO PDF</a>
+          <a class="nav-link text-dark me-4" aria-current="page" href="/doctopdf">DOCX TO PDF</a>
         </li>
       </ul>
       <form class="d-flex">
@@ -22,23 +134,25 @@
   </div>
 </nav>
 <div class="container  position-absolute top-50 start-50 translate-middle">
-          <h1 class="text-center ">
-              PPTX to PDF Converter
-          </h1>
+  <h1 class="text-center ">
+    PPTX to PDF Converter
+  </h1>
 
-          <form action="/pptxtopdf" method="post" enctype="multipart/form-data">
-            <div class="form-group mb-4">
-                <input type="file" name="file" id="" required class="form-control mt-5 border-info w-25 position-relative w-50 top-50 start-50 translate-middle input-btn">
-            </div>
-            <div class="form-group d-flex justify-content-center align-items-center flex-column">
-                <button class="btn btn-orange btn-block myborder fs-3">
-                    Convert to PDF
-                </button>
-            </div>
-        </form>
-      </div>
-      <!-- ********************************************* -->
+  <form action="/pptxtopdf" method="post" enctype="multipart/form-data">
+    <div class="form-group mb-4">
+      <input type="file" name="file" id="" required
+        class="form-control mt-5 border-info w-25 position-relative w-50 top-50 start-50 translate-middle input-btn">
+    </div>
+    <div class="form-group d-flex justify-content-center align-items-center flex-column">
+      <button class="btn btn-orange btn-block myborder fs-3">
+        Convert to PDF
+      </button>
+    </div>
+  </form>
+</div>
+<!-- ********************************************* -->
 
-                       <script src="javascript/bootstrap.bundle.min.js"></script>
-    </body>
+<script src="javascript/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
