--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -1,51 +1,169 @@
 {{> header title="Register"}}
 
+<div class="pattern0 fireworks fire0">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern1 fireworks fire1">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern2 fireworks fire2">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern3 fireworks fire3">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern4 fireworks fire4">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern5 fireworks fire5">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern6 fireworks fire6">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern7 fireworks fire7">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern8 fireworks fire8">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern9 fireworks fire9">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern10 fireworks fire10">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern11 fireworks fire11">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern12 fireworks fire12">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern13 fireworks fire13">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern14 fireworks fire14">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern15 fireworks fire15">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern16 fireworks fire16">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern17 fireworks fire17">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern18 fireworks fire18">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern19 fireworks fire19">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
 
-    <nav class="navbar navbar-expand-lg text-white bg-white border-bottom">
-        <div class="container-fluid mx-5 text-white">
-            <a class="navbar-brand logo fs-4 text-dark" href="/">FileFormatConverter</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon fs-3 text-dark"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item links">
-                        <a class="nav-link text-dark" aria-current="page" href="/">Home</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item links">
-                        <a class="nav-link text-success" href="/login">Log in</a>
-                    </li>
+<div class="area">
+  <ul class="circles">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
 
-                </ul>
-                </form>
-            </div>
-        </div>
-    </nav>
+  </ul>
+</div>
+<nav class="navbar navbar-expand-lg text-white bg-white border-bottom">
+  <div class="container-fluid mx-5 text-white">
+    <a class="navbar-brand logo fs-4 text-dark" href="/">FileFormatConverter</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+      aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon fs-3 text-dark"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item links">
+          <a class="nav-link text-dark" aria-current="page" href="/">Home</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item links">
+            <a class="nav-link text-success" href="/login">Log in</a>
+          </li>
+
+        </ul>
+      </form>
+    </div>
+  </div>
+</nav>
 
 
-<form class="row g-3 container position-absolute top-50 start-50 translate-middle form-floating mb-3 w-75" action="/signup" method="post">
+<form class="row g-3 container position-absolute top-50 start-50 translate-middle form-floating mb-3 w-75"
+  action="/signup" method="post">
   <div class="col-md-12">
     <label for="inputEmail4" class=" fs-4 tokenLable">Username:</label>
-    <input type="text" class="form-control fs-4 p-2 input-btn tokenInput" placeholder="username" autocomplete="off" name="username" id="inputEmail4">
+    <input type="text" class="form-control fs-4 p-2 input-btn tokenInput" placeholder="username" autocomplete="off"
+      name="username" id="inputEmail4">
   </div>
   <div class="col-md-12">
     <label for="inputEmail4" class=" fs-4 tokenLable">Email:</label>
-    <input type="email" class="form-control fs-4 p-2 input-btn tokenInput" placeholder="email" autocomplete="off" name="email" id="inputEmail4">
+    <input type="email" class="form-control fs-4 p-2 input-btn tokenInput" placeholder="email" autocomplete="off"
+      name="email" id="inputEmail4">
   </div>
   <div class="col-md-12">
     <label for="inputPassword4" class="fs-4  tokenLable">Password</label>
-    <input type="password" class="form-control p-2 fs-4 input-btn  tokenInput" placeholder="password" name="password" id="inputPassword4">
+    <input type="password" class="form-control p-2 fs-4 input-btn  tokenInput" placeholder="password" name="password"
+      id="inputPassword4">
   </div>
   <div class="col-12">
-    <button type="submit" class="btn w-50 position-relative w-50 mt-4 top-50 start-btn start-50 translate-middle btn-primary py-3">Sign Up</button>
+    <button type="submit"
+      class="btn w-50 position-relative w-50 mt-4 top-50 start-btn start-50 translate-middle btn-primary py-3">Sign
+      Up</button>
   </div>
 </form>
 
 
-                       <script src="javascript/bootstrap.bundle.min.js"></script>
-    </body>
+<script src="javascript/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
