--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -1,47 +1,161 @@
 {{> header title="File Format Converter"}}
-<div class="">
-    <nav class="navbar navbar-expand-lg text-white bg-white border-bottom">
-        <div class="container-fluid mx-5 text-dark">
-            <a class="navbar-brand logo mycol fs-4 text-dark" href="/">FileFormatConverter</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon fs-3 text-white"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item links">
-                        <a class="nav-link text-dark" aria-current="page" href="/">Home</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
+
+<div class="area">
+    <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+
+    </ul>
+</div>
+<div class="pattern0 fireworks fire0">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern1 fireworks fire1">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern2 fireworks fire2">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern3 fireworks fire3">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern4 fireworks fire4">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern5 fireworks fire5">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern6 fireworks fire6">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern7 fireworks fire7">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern8 fireworks fire8">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern9 fireworks fire9">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern10 fireworks fire10">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern11 fireworks fire11">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern12 fireworks fire12">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern13 fireworks fire13">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern14 fireworks fire14">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern15 fireworks fire15">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern16 fireworks fire16">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern17 fireworks fire17">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern18 fireworks fire18">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<div class="pattern19 fireworks fire19">
+    <div class="ring_1"></div>
+    <div class="ring_2"></div>
+</div>
+<nav class="navbar navbar-expand-lg text-white bg-white border-bottom ">
+    <div class="container-fluid mx-5 text-dark">
+        <a class="navbar-brand logo mycol fs-4 text-dark" href="/">FileFormatConverter</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon fs-3 text-white"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item links">
+                    <a class="nav-link text-dark" aria-current="page" href="/">Home</a>
+                </li>
+            </ul>
+            <form class="d-flex">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item links">
                         <a class="nav-link myOrange" href="/signup">Sign Up</a>
                     </li>
                     <li class="nav-item links">
-                       <a class="nav-link text-dark" href="/databaselogin" aria-current="page">Show Database Data</a>
+                        <a class="nav-link text-dark" href="/databaselogin" aria-current="page">Show Database Data</a>
                     </li>
                 </ul>
-                </form>
-            </div>
+            </form>
         </div>
-    </nav>
+    </div>
+</nav>
 
 <form action="/login" method="post"
     class="container position-absolute top-50 start-50 translate-middle form-floating mb-3">
     <div class="mb-3 container w-75">
         <label for="formGroupExampleInput" class="form-label fs-4 tokenLable">Username: </label>
-        <input type="text" name="username" class="form-control p-2 input-btn fs-4 tokenInput" autocomplete="off"  id="formGroupExampleInput"
-            placeholder="Username">
+        <input type="text" name="username" class="form-control p-2 input-btn fs-4 tokenInput" autocomplete="off"
+            id="formGroupExampleInput" placeholder="Username">
         <label for="formGroupExampleInput" class="form-label  mt-3 fs-4 tokenLable">Password: </label>
-        <input type="password" name="password" class="form-control input-btn p-2 fs-4 tokenInput mb-2" id="formGroupExampleInput"
-            placeholder="Password">
+        <input type="password" name="password" class="form-control input-btn p-2 fs-4 tokenInput mb-2"
+            id="formGroupExampleInput" placeholder="Password">
         <pre class="text-danger fs-5 py-1">{{msg}}</pre>
         <pre class="text-danger fs-5 py-1">{{msgs}}</pre>
     </div>
-    <button type="submit" class="btn btn-primary mt-5 py-3 fs-4 position-relative w-50 top-50 start-50 translate-middle text-center start-btn">Log In</button>
+    <button type="submit"
+        class="btn btn-primary mt-5 py-3 fs-4 position-relative w-50 top-50 start-50 translate-middle text-center start-btn">Log
+        In</button>
 </form>
 
-                       <script src="javascript/bootstrap.bundle.min.js"></script>
-    </body>
+<script src="javascript/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
