change the design of navbar

--- a/templates/views/signup.hbs
+++ b/templates/views/signup.hbs
@@ -112,9 +112,9 @@
 
   </ul>
 </div>
-<nav class="navbar navbar-expand-lg text-white bg-white border-bottom">
+<nav class="navbar navbar-expand-lg text-white bg-my ">
   <div class="container-fluid mx-5 text-white">
-    <a class="navbar-brand logo fs-4 text-dark" href="/">FileFormatConverter</a>
+    <a class="navbar-brand logo fs-4 text-mygreen" href="/">FileFormatConverter</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
       aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon fs-3 text-dark"></span>
@@ -122,13 +122,13 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item links">
-          <a class="nav-link text-dark" aria-current="page" href="/">Home</a>
+          <a class="nav-link text-myteal" aria-current="page" href="/">Home</a>
         </li>
       </ul>
       <form class="d-flex">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item links">
-            <a class="nav-link text-success" href="/login">Log in</a>
+            <a class="nav-link text-myteal" href="/login">Log in</a>
           </li>
 
         </ul>
