--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -110,9 +110,9 @@
 
 	</ul>
 </div>
-<nav class="navbar navbar-expand-lg text-white bg-white	 border-bottom">
+<nav class="navbar navbar-expand-lg bg-my">
 	<div class="container-fluid mx-5 text-white">
-		<a class="navbar-brand logo fs-4 text-dark" href="/">FileFormatConverter</a>
+		<a class="navbar-brand logo fs-4 text-mygreen" href="/">FileFormatConverter</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
 			aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon fs-3 text-dark"></span>
