--- a/templates/views/database.hbs
+++ b/templates/views/database.hbs
@@ -110,34 +110,41 @@
     <div class="ring_1"></div>
     <div class="ring_2"></div>
 </div>
-<div id="nav" class="bg-transparent border-bottom">
-    <nav class="navbar bg-transparent container">
-        <div class="container-fluid">
-            <a class="navbar-brand logo">FileFormatConverter</a>
-            <div class="d-flex links">
-
-                <a class="nav-link text-danger me-4" aria-current="page" href="/logout">Log out</a>
-            </div>
-        </div>
-    </nav>
-</div>
+<nav class="navbar navbar-expand-lg bg-my">
+	<div class="container-fluid mx-5 text-white">
+		<a class="navbar-brand logo fs-4 text-mygreen" href="/">FileFormatConverter</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+			aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon fs-3 text-dark"></span>
+		</button>
+		<div class="collapse navbar-collapse " id="navbarTogglerDemo02">
+			<form class="d-flex">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item links">
+						<a class="nav-link text-danger me-4" aria-current="page" href="/logout">Log out</a>
+					</li>
+				</ul>
+			</form>
+		</div>
+	</div>
+</nav>
 
 <div class="col-sm-8 mt-5 container">
-    <h2 class="alert alert-success text-center">List of Data: </h2>
+    <h2 class="alert alert-success text-center">List of Users: </h2>
     <table class="table text-white border">
         <thead class="border">
-            <tr class="border">
+            <tr class="border text-center">
 
-                <th class="border text-success" scope="col">USERNAME</th>
-                <th class="border text-success" scope="col">EMAIL</th>
-                <th class="border text-success" scope="col">PASSWORD</th>
+                <th class="border text-white" scope="col">USERNAME</th>
+                <th class="border text-white" scope="col">EMAIL</th>
+                <th class="border text-white" scope="col">PASSWORD</th>
 
             </tr>
         </thead>
-        <tbody class="text-white border">
+        <tbody class="text-white border text-center">
             {{#each data}}
             <tr class="border">
-                <td class="border text-dark">{{username}}</td>
+                <td class="border text-white">{{username}}</td>
                 <td class="border text-info">{{email}}</td>
                 <td class="border text-danger">{{password}}</td>
             </tr>
