--- a/templates/views/databaselogin.hbs
+++ b/templates/views/databaselogin.hbs
@@ -111,9 +111,9 @@
     <div class="ring_2"></div>
 </div>
 <div class="">
-    <nav class="navbar navbar-expand-lg text-white bg-white border-bottom">
+    <nav class="navbar navbar-expand-lg text-white bg-my">
         <div class="container-fluid mx-5 text-white">
-            <a class="navbar-brand logo fs-4 text-dark" href="/">FileFormatConverter</a>
+            <a class="navbar-brand logo fs-4 text-mygreen" href="/">FileFormatConverter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -121,7 +121,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item links">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link text-myteal" aria-current="page" href="/">Home</a>
                     </li>
 
                 </ul>
