--- a/templates/views/doctopdf.hbs
+++ b/templates/views/doctopdf.hbs
@@ -112,9 +112,9 @@
 
   </ul>
 </div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-my">
   <div class="container-fluid mx-5">
-    <a class="navbar-brand fs-4 text-dark">FileFormatConverter</a>
+    <a class="navbar-brand fs-4 text-mygreen">FileFormatConverter</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
       aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -122,10 +122,10 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link text-dark me-4" aria-current="page" href="/pptxtopdf">PPTX TO PDF</a>
+          <a class="nav-link text-myteal me-4" aria-current="page" href="/pptxtopdf">PPTX TO PDF</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark me-4" aria-current="page" href="/sheetTopdf">XLSX TO PDF</a>
+          <a class="nav-link text-myteal me-4" aria-current="page" href="/sheetTopdf">XLSX TO PDF</a>
         </li>
       </ul>
       <form class="d-flex">
