--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -111,26 +111,26 @@
     <div class="ring_1"></div>
     <div class="ring_2"></div>
 </div>
-<nav class="navbar navbar-expand-lg text-white bg-white border-bottom ">
+<nav class="navbar navbar-expand-lg  bg-my">
     <div class="container-fluid mx-5 text-dark">
-        <a class="navbar-brand logo mycol fs-4 text-dark" href="/">FileFormatConverter</a>
+        <a class="navbar-brand logo mycol fs-4 text-mygreen" href="/">FileFormatConverter</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon fs-3 text-white"></span>
+            <span class="navbar-toggler-icon fs-3"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item links">
-                    <a class="nav-link text-dark" aria-current="page" href="/">Home</a>
+                    <a class="nav-link text-myteal" aria-current="page" href="/">Home</a>
                 </li>
             </ul>
             <form class="d-flex">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item links">
-                        <a class="nav-link myOrange" href="/signup">Sign Up</a>
+                        <a class="nav-link text-myteal" href="/signup">Sign Up</a>
                     </li>
                     <li class="nav-item links">
-                        <a class="nav-link text-dark" href="/databaselogin" aria-current="page">Show Database Data</a>
+                        <a class="nav-link text-myteal" href="/databaselogin" aria-current="page">Show Database Data</a>
                     </li>
                 </ul>
             </form>
