--- a/templates/views/database.hbs
+++ b/templates/views/database.hbs
@@ -112,7 +112,7 @@
 </div>
 <nav class="navbar navbar-expand-lg bg-my">
 	<div class="container-fluid mx-5 text-white">
-		<a class="navbar-brand logo fs-4 text-mygreen" href="/">FileFormatConverter</a>
+		<a class="navbar-brand logo fs-4 text-mygreen" href="/database">FileFormatConverter</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
 			aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon fs-3 text-dark"></span>
