--- a/templates/views/databaselogin.hbs
+++ b/templates/views/databaselogin.hbs
@@ -113,7 +113,7 @@
 <div class="">
     <nav class="navbar navbar-expand-lg text-white bg-my">
         <div class="container-fluid mx-5 text-white">
-            <a class="navbar-brand logo fs-4 text-mygreen" href="/">FileFormatConverter</a>
+            <a class="navbar-brand logo fs-4 text-mygreen" href="/databaselogin">FileFormatConverter</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
